--- a/git_index.html
+++ b/git_index.html
@@ -11,5 +11,11 @@
 
 <h1> new git </h1>
 
+<main>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur dolore dolorem, doloremque eaque fuga harum inventore ipsam quasi qui soluta?
+    </p>
+</main>
+
+
 </body>
 </html>
