--- a/git_index.html
+++ b/git_index.html
@@ -11,6 +11,13 @@
 
 <h1> new git </h1>
 
+<nav>
+    <ul>
+        <li>nav1</li>
+        <li>nav2</li>
+        <li>nav3</li>
+    </ul>
+</nav>
 <main>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur dolore dolorem, doloremque eaque fuga harum inventore ipsam quasi qui soluta?
     </p>
